--- a/src/main/webapp/WEB-INF/resources/css/style.css
+++ b/src/main/webapp/WEB-INF/resources/css/style.css
@@ -25,9 +25,9 @@
 }
 
 .topbar .navbar-nav > li {
-  margin-left:30px;
-  margin-right:30px;
-  padding: 10px;
+	  margin-left:30px;
+	  margin-right:30px;
+	  padding: 10px;
 }
 
 /* change the brand and text color */
@@ -59,7 +59,7 @@
 
 /* change color of link background on hover */
 .topbar .nav-item:hover {
-  	background-color: #ec312a;
+  	/* background-color: #ec312a; */
 }
 /* change color of link on hover */
 .topbar .nav-item:hover .nav-link {
