--- a/src/main/webapp/WEB-INF/view/account-home.html
+++ b/src/main/webapp/WEB-INF/view/account-home.html
@@ -1,13 +1,5 @@
-<%@ page contentType="text/html;charset=ISO-8859-1" isELIgnored="false" %>
-<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
-<%@ taglib prefix="security" uri="http://www.springframework.org/security/tags" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-
-<security:authentication var="principal" property="principal" />
-<security:authentication var="macroplan" property="principal.macroPlan" />
-
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="https://thymeleaf.org">
 	<head>
 		<title>MacroPro | Getting your nutrition in check!</title>
 		<style>
@@ -17,22 +9,22 @@
 			}
 		</style>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link href="${pageContext.request.contextPath}/resources/css/style.css" rel="stylesheet" >
+		<link th:href="@{/resources/css/style.css}" rel="stylesheet" >
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="${pageContext.request.contextPath}/resources/js/toolbar.js"></script>
+		<script th:src="@{/resources/js/toolbar.js}"></script>
 	</head>
 	
 	<body>	
 		<div id="mp-header">
-			<div id="mp-logo" class="horizontal-center"><img src="${pageContext.request.contextPath}/resources/images/logo.jpg" width="200" height="120" /></div>
+			<div id="mp-logo" class="horizontal-center"><img th:src="@{/resources/images/logo.jpg}" width="200" height="120" /></div>
 			<br>
 		</div>	
 		
 		<nav class="navbar navbar-expand-md topbar">
 			<div class="container-fluid">
 				<ul class="navbar-nav mx-auto">
-					<li id="account" class="nav-item"><a class="nav-link" href="${pageContext.request.contextPath}/account/">My Home</a></li>
-					<li id="food" class="nav-item"><a class="nav-link" href="${pageContext.request.contextPath}/food/diary">Food</a></li>
+					<li id="account" class="nav-item"><a class="nav-link" th:href="@{/account}">My Home</a></li>
+					<li id="food" class="nav-item"><a class="nav-link" th:href="@{/food/diary}">Food</a></li>
 					<li id="about" class="nav-item"><a class="nav-link" href="#">About</a></li>
 					<li id="contactus" class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
 				</ul>
@@ -42,8 +34,8 @@
 		<nav class="navbar navbar-expand-md subbar">
 			<div class="container-fluid">
 				<ul class="navbar-nav mx-auto">
-					<li id="home" class="nav-item"><a class="nav-link" href="${pageContext.request.contextPath}/account/">Home</a></li>
-					<c:if test="${principal.submittedGoal == true}"><li id="goals" class="nav-item"><a class="nav-link" href="${pageContext.request.contextPath}/account/goals">Edit Goal</a></li></c:if>
+					<li id="home" class="nav-item"><a class="nav-link" th:href="@{/account}">Home</a></li>
+					<li th:if="${#authentication.getPrincipal().isSubmittedGoal()} == true" id="goals" class="nav-item"><a class="nav-link" th:href="@{/account/goals}">Edit Goal</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -52,38 +44,37 @@
 		<div id="main" class="horizontal-center" >
 			<div class="horizontal-center">
 				<p>
-					<b>Welcome ${principal.username}!</b><br>
+					<b>Welcome <b th:text="${#authentication.getPrincipal().getUsername()}"></b>!</b><br>
 				</p>
 			</div>
 			
-			<c:if test="${principal.submittedGoal == false}">
+			<div th:if="${!#authentication.getPrincipal().isSubmittedGoal()}">
 				<b>You have not submitted your fitness goals. Please do so 
-				<a href="${pageContext.request.contextPath}/account/goals">here</a>!</b>
+				<a th:href="@{/account/goals}">here</a>!</b>
 				<br><br>
-			</c:if>
+			</div>
 			
-			<c:if test="${principal.submittedGoal == true}">
+			<div th:if="${#authentication.getPrincipal().isSubmittedGoal()}">
 				<b>Below is your daily macro plan:</b><br><br>
 				
 				<div style="text-align: center;">
-					<b><u>Target calories:</u> ${macroplan.targetCalories}</b><br>
-					<b><u>Carbs(g):</u> ${macroplan.carbsGrams}</b><br>
-					<b><u>Fat(g):</u> ${macroplan.fatGrams}</b><br>
-					<b><u>Protein(g):</u> ${macroplan.proteinGrams}</b><br><br>
+					<b><u>Target calories:</u> <span th:text="${#authentication.getPrincipal().getMacroPlan().getTargetCalories()}"></span></b><br>
+					<b><u>Carbs(g):</u> <span th:text="${#authentication.getPrincipal().getMacroPlan().getCarbsGrams()}"></span></b><br>
+					<b><u>Fat(g):</u> <span th:text="${#authentication.getPrincipal().getMacroPlan().getFatGrams()}"></span></b><br>
+					<b><u>Protein(g):</u> <span th:text="${#authentication.getPrincipal().getMacroPlan().getProteinGrams()}"></span></b><br><br>
 				</div>
 				
-				<!-- <div class="horizontal-center">
-					<a href="${pageContext.request.contextPath}/account/goals">Edit</a>
-				</div> 
-				<br> -->
-			</c:if>
+<!-- 			<div class="horizontal-center">
+					<a th:href="@{/account/goals}">Edit</a>
+				</div>  -->
+			</div>
 		</div>
 		
 		<br>
 		<div id="submit-btn" class="horizontal-center" >
-			<form:form action="${pageContext.request.contextPath}/logout" method="POST">
+			<form th:action="@{/logout}" method="POST">
 				<input type="submit" value="Logout" />
-			</form:form>
+			</form>
 		</div>
 		<!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
