--- a/src/main/webapp/WEB-INF/view/welcome.html
+++ b/src/main/webapp/WEB-INF/view/welcome.html
@@ -1,8 +1,5 @@
-<%@ page contentType="text/html;charset=ISO-8859-1" isELIgnored="false" %>
-<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
-<%@ taglib prefix="security" uri="http://www.springframework.org/security/tags" %>
-
-<html>
+<!DOCTYPE HTML>
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
 	<title>MacroPro | Getting your nutrition in check!</title>
 	<style>
@@ -12,15 +9,17 @@
 		}
 	</style>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link href="${pageContext.request.contextPath}/resources/css/style.css" rel="stylesheet" >	
+	<link th:href="@{/resources/css/style.css}" rel="stylesheet" >
+	<link th:href="@{/resources/css/login-style.css}" rel="stylesheet" >
+			
 </head>
 <body>
 	<div id="mp-header">
-		<div id="mp-logo" class="horizontal-center"><a href="${pageContext.request.contextPath}/" ><img src="${pageContext.request.contextPath}/resources/images/logo.jpg" width="200" height="120" /></a></div>
+		<div id="mp-logo" class="horizontal-center"><a th:href="@{/}" ><img th:src="@{/resources/images/logo.jpg}" width="200" height="120" /></a></div>
 		<div id="links" class="horizontal-center">
 			<p style='padding-top: 20px'>
-		    	<a class="welcome-link" href="${pageContext.request.contextPath}/account/login">Log In</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-		    	<a class="welcome-link" href="${pageContext.request.contextPath}/account/signup">Sign Up</a>
+		    	<a class="welcome-link" th:href="@{/account/login}">Log In</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+		    	<a class="welcome-link" th:href="@{/account/signup}">Sign Up</a>
 	    	</p>
 	    </div>
 	</div>
