--- a/src/main/webapp/WEB-INF/view/diary.html
+++ b/src/main/webapp/WEB-INF/view/diary.html
@@ -3,14 +3,23 @@
 <head>
 	<title>MacroPro | Getting your nutrition in check!</title>
 	<style>
+		body {
+			padding-bottom: 175px;
+		}
 		.horizontal-center{
 		  	display: table;
 		  	margin: 0 auto;
 		}
 		.diary-container {
-			margin-top: 2%;
+			margin-top: 3%;
     		position: relative;
 			left: 9.5%;
+		}
+		.date-container {
+		  	display: table;
+		  	margin: 0 auto;
+			margin-top: 3%;
+    		
 		}
 		.meal-header {
 			font-weight: bold;
@@ -55,13 +64,66 @@
 			background-color: Transparent;
     		border: none;
 		}
+		.prev {
+		}
+		.log-date {
+		    background-color: black;
+		    color: white;
+		    width: 150px;
+		    height: 35px;
+		    text-align: center;
+		    line-height: 35px;
+		    display: inline-block;
+		}
+		.prev-wrapper {
+		    background-color: black;
+		    display: inline-block;
+		    width: 30px;
+		    height: 35.5px;
+		    border-top-left-radius: 40%;
+		    border-bottom-left-radius: 40%;
+		    margin-right: 2px;
+		    position: relative;
+		    top: -6px;
+/* 		    color: white; */
+		}
+		.prev-wrapper > a > img {
+			position: relative;
+			top: 32.5%;
+			left: 20%;
+			transform: translateY(-50%);
+		}
+		.next-wrapper {
+		    background-color: black;
+/* 		    color: white; */
+		    width: 30px;
+		    height: 35.5px;
+		    border-top-right-radius: 40%;
+		    border-bottom-right-radius: 40%;
+		    display: inline-block;
+		    position: relative;
+		    top: -6px;
+		    margin-left: 2px;
+		}
+		.next-wrapper > a > img {
+			position: relative;
+			top: 32.5%;
+			left: 22.5%;
+			transform: translateY(-50%);
+		}
 	</style>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link th:href="@{/resources/css/style.css}" rel="stylesheet" >
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script th:src="@{/resources/js/toolbar.js}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
+		<span id="currentDate" th:text="${date}" style="display: none;"></span>
 		<div id="mp-header">
 			<div id="mp-logo" class="horizontal-center"><img th:src="@{/resources/images/logo.jpg}" width="200" height="120" /></div>
 			<br>
@@ -88,6 +150,26 @@
 				</ul>
 			</div>
 		</nav>
+		
+		<div class="date-container" >
+
+			<div style="display: inline-block; padding-right: 20px; font-weight: bold;">
+				<span>Food Diary For:</span>
+			</div>
+			<div class="prev-wrapper" >
+				<a id="prev" class="prev" href="#" ><img th:src="@{/resources/images/left-arrow.png}" width="16" height="16" /></a>
+			</div>
+			<div class="log-date">
+				<span th:text="${date}" ></span>
+			</div>
+			<div class="next-wrapper" >
+				<a id="next" class="next" href="#" ><img th:src="@{/resources/images/right-arrow.png}" width="16" height="16" /></a>
+			</div>
+			<div style="display: inline-block; padding-left: 7.5px;">
+				<input type="hidden" id="datepicker">
+			</div>
+
+		</div>
 		
 		<div class="diary-container container">
 			<form th:action="@{/food/diary/remove-food}" method="POST" >
@@ -227,6 +309,40 @@
 		</div>
 		
 		<script type="text/javascript">
+			var d = $('#currentDate').text();
+			var dArr = d.split("-")
+			
+ 			var $currentDate = new Date(dArr[0], dArr[1]-1, dArr[2]);
+ 			var $prevDate = new Date($currentDate);
+			$prevDate.setDate($currentDate.getDate() - 1);
+ 			var $nextDate = new Date($currentDate);
+			$nextDate.setDate($currentDate.getDate() + 1);
+			
+			// previous date
+			var $dd = $prevDate.getDate();
+			var $mm = $prevDate.getMonth() + 1;
+			var $yyyy = $prevDate.getFullYear();
+			
+			if($dd<10){$dd='0'+$dd}
+			if($mm<10){$mm='0'+$mm} 
+			$prevDate = $yyyy + '-' + $mm + '-' + $dd;
+			
+			// next date
+			$dd = $nextDate.getDate();
+			$mm = $nextDate.getMonth() + 1;
+			$yyyy = $nextDate.getFullYear();
+			
+			if($dd<10){$dd='0'+$dd}
+			if($mm<10){$mm='0'+$mm} 
+			$nextDate = $yyyy + '-' + $mm + '-' + $dd;
+						
+			console.log($currentDate);
+			console.log($prevDate);
+			console.log($nextDate);
+			
+			$("a[id='prev']").attr('href','diary?date=' + $prevDate);
+			$("a[id='next']").attr('href','diary?date=' + $nextDate);
+		
            $('[id^=breakfast]').click(function() {
                $("input[name=meal]").val("0"); 
            });
@@ -246,9 +362,30 @@
            $('[id^=snackThree]').click(function() {
                $("input[name=meal]").val("5"); 
             });
+           
+           $( "#datepicker" ).datepicker({
+        	   onSelect: function(date) {
+        		   var href = window.location.href.split("?");
+                   var dateArr = date.split("/");
+                   var date = dateArr[2] + '-' + dateArr[0] + '-' + dateArr[1];
+                   window.location.href = href[0] + "?date=" + date;
+                   
+                   /* $.ajax({
+                	   type: "POST",
+                       url: './diary',
+                       data: {
+                           date: date
+                       },
+                       success: function (data) {
+                           console.log(data);
+                       }
+                   }); */
+               },
+               showOn: "button",
+               buttonImage: "../resources/images/calendar.png",
+               buttonImageOnly: true,
+               buttonText: "Select entry date"
+           });
        	</script>
-		
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
