--- a/src/main/webapp/WEB-INF/resources/css/style.css
+++ b/src/main/webapp/WEB-INF/resources/css/style.css
@@ -123,18 +123,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 /*---Media Queries --*/
 @media (max-width: 992px) {
 
@@ -148,29 +136,29 @@
 
 
 /*---Firefox Bug Fix --*/
-.carousel-item {
+/* .carousel-item {
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
   transition: transform 0.5s ease, -webkit-transform 0.5s ease;
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
-}
+} */
 /*--- Fixed Background Image --*/
-figure {
+/* figure {
   position: relative;
   width: 100%;
   height: 60%;
   margin: 0!important;
-}
-.fixed-wrap {
+} */
+/* .fixed-wrap {
   clip: rect(0, auto, auto, 0);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
-#fixed {
+} */
+/* #fixed {
   background-image: url('img/mac.png');
   position: fixed;
   display: block;
@@ -183,11 +171,11 @@ figure {
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
   will-change: transform;
-}
+} */
 /*--- Bootstrap Padding Fix --*/
-[class*="col-"] {
+/* [class*="col-"] {
     padding: 1rem;
-}
+} */
 
 /*
 Extra small (xs) devices (portrait phones, less than 576px)
