--- a/src/main/webapp/WEB-INF/view/my-foods.html
+++ b/src/main/webapp/WEB-INF/view/my-foods.html
@@ -7,47 +7,180 @@
 		  	display: table;
 		  	margin: 0 auto;
 		}
+		.createfood-btn {
+			float: right;
+			width: 25%;
+			margin-right: 20%;
+		}
 		.food-list {
 			float:left;
-			margin-right: 28%;
-		}
-		.createfood-btn {
-    		position: relative;
-			left: -14.5%;
-    		/* position: fixed;
-    		left: 400%; */
-			/* display: inline-block; */
-		}
-		.createfood-btn-list {
-    		position: relative;
-			left: -11.5%;
-    		/* position: fixed;
-    		left: 400%; */
-			/* display: inline-block; */
+			width: 40%;
 		}
 		.food-list-container{
-			margin-top: 2%;
-    		position: relative;
-			left: 30%;
+			margin-top: 3%;
+			margin-left: 24%;
 		}
-		.empty-list-message {
-			margin-top: 5%;
-    		position: relative;
-			left: 10%;
-/* 			margin-top: 0%;
-    		position: relative;
-			left: 2%; */
+		.deleted-text {
+			margin-top: 3%;
+			margin-left: 24%;
 		}
 		.food-entries {
-			margin-top: 5%;
+			margin-top: 2%;
     		position: relative;
 			left: 10%;
+		}
+		.empty-list-message {
+			margin-top: 2%;
+    		position: relative;
+			left: 10%;
+		}
+		.bg-modal {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0, 0, 0, 0.7);
+			top: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			display: none;
+		}
+		.content-modal {
+			height: 475px;
+			width: 400px;
+			background-color: white;
+			border-radius: 4px;
+			padding: 20px;
+			position: absolute;
+		}
+		.close-btn {
+			position: absolute;
+			top: -5px;
+			right: 15px;
+			font-size: 50px;
+			transform: rotate(45deg);
+			cursor: pointer;
+		}
+		.nutrition-label {
+			margin: 0 auto;
+			position: relative;
+			top: 5%;
+			left: 0%;
+			height: 250px;
+			width: 235px;
+			border: 1px solid black;
+			overflow: hidden;
+		}
+/* 		.nutrition-label .macro {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			font-size: 10px;
+			position: relative;
+			left: 7.5px;
+		} */
+		.macro {
+			margin-left: 7px;
+			width: 93.75%;
+		}
+		.macro tr {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			font-size: 10px;
+		}
+		.macro tr .macro-text {
+			font-weight: 750;
+		 }
+		.macro tr .macro-value {
+			text-align: left;
+		 }
+		.macro tr .macro-percent {
+			font-weight: 750;
+			text-align: right;
+		}
+		.macro-item {
+			border-bottom: 1px solid black;
+		}
+		.divider {
+			border-bottom: 5px solid black;
+		}
+		.nutrition-facts {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			font-weight: 700;
+			font-size: 30px;
+			display: table;
+			margin: 0 auto;
+		}
+		.serving-size {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			font-weight: 725;
+			font-size: 13px;
+		}
+		.ss-text {
+			float: left;
+			position: relative;
+			left: 7.5px;
+		}
+		.ss-value {
+			float: right;
+			position: relative;
+			right: 7.5px;
+		}
+		.calories {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
+		.calories-text {
+			float: left;
+			position: relative;
+			margin-top: 3%;
+			left: 7.5px;
+			font-weight: 750;
+			font-size: 18px;
+		}
+		.calories-value {
+			float: right;
+			position: relative;
+			right: 7.5px;
+			font-weight: 750;
+			font-size: 24px;
+		}
+		.percent-macros {
+			position: relative;
+			right: 3.25%;
+			top: 0.5%;
+			text-align: right;
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			font-weight: 750;
+			font-size: 10px;
+			float: right;
+		}
+		.sel-food {
+			position: relative;
+			top: 0%;
+			float: left;
+		}
+		.sel-food-item {
+			/* display:inline-block; */
+		}
+		.delete-btn {
+			float: left;
+			position: relative;
+			left: 2%;
+		}
+		.edit-btn {
+			float: left;
+		}
+		.food-list-container .food-list a:link {
+		    text-decoration: underline;
+		}
+		.food-list-container .food-list a:hover {
+		    text-decoration: none;
 		}
 	</style>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link th:href="@{/resources/css/style.css}" rel="stylesheet" >
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script th:src="@{/resources/js/toolbar.js}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	
 </head>
 <body>
 		<div id="mp-header">
@@ -81,7 +214,17 @@
 			</nav>
 		</div>
 		
-		<div class= "food-list-container">
+		<input id="goal-carbs" type="hidden" th:value="${#authentication.getPrincipal().getMacroPlan().getCarbsGrams()}" >
+		<input id="goal-fat" type="hidden" th:value="${#authentication.getPrincipal().getMacroPlan().getFatGrams()}" >
+		<input id="goal-protein" type="hidden" th:value="${#authentication.getPrincipal().getMacroPlan().getProteinGrams()}" > 
+		
+		<th:block th:if="${deleted != ''}" >
+			<div class="deleted-text">
+				<span style="color: red;" th:text="${deleted}"></span>
+			</div>
+		</th:block>
+		
+		<div class="food-list-container">
 			<div class="food-list">
 				<b>Your Foods</b><br>
 				
@@ -89,28 +232,177 @@
 					You have not added any foods at the moment.
 				</div>
 				<div th:if="${not #lists.isEmpty(myfoods)}" class="food-entries">
-					<th:block th:each="food: ${myfoods}">
-					    <a th:href="@{|/food/my-foods/${food.id}|}" th:text="${food.name}" ></a><br>
+					<ul>
+					<th:block th:each="food, i: ${myfoods}">
+						<th:block th:if="${food.brand != ''}" >
+					    	<li><a th:id="'food_' + ${i.index}" href="#" th:text="${food.brand} + ' - ' + ${food.name} + ' (' + ${food.servingSize} + ' ' + ${food.unitOfMeasurement} + ')' " style="color:black;"></a></li>
+					    </th:block>
+						<th:block th:if="${food.brand == ''}" >
+					    	<li><a th:id="'food' + ${i.index}" href="#" th:text="${food.name} + ' (' + ${food.servingSize} + ' ' + ${food.unitOfMeasurement} + ')' "></a></li>
+					    </th:block>
+					    
+					    <input th:id="'id_' + ${i.index}" type="hidden" th:value="${food.id}">
+					    <input th:id="'brand_' + ${i.index}" type="hidden" th:value="${food.brand}">
+					    <input th:id="'name_' + ${i.index}" type="hidden" th:value="${food.name}">
+					    <input th:id="'servingsize_' + ${i.index}" type="hidden" th:value="${food.servingSize}">
+					    <input th:id="'unitofmeasurement_' + ${i.index}" type="hidden" th:value="${food.unitOfMeasurement}">
+					    <input th:id="'calories_' + ${i.index}" type="hidden" th:value="${food.calories}">
+					    <input th:id="'carbs_' + ${i.index}" type="hidden" th:value="${food.carbsGrams}">
+					    <input th:id="'fat_' + ${i.index}" type="hidden" th:value="${food.fatGrams}">
+					    <input th:id="'protein_' + ${i.index}" type="hidden" th:value="${food.proteinGrams}">
+					    <input th:id="'fiber_' + ${i.index}" type="hidden" th:value="${food.fiberGrams}">
 					</th:block>
+					</ul>
 				</div>
 			</div>
 			
-			<div th:if="${#lists.isEmpty(myfoods)}" class="createfood-btn">
-				<a class="btn btn-success" th:href="@{/food/new}" role="button">Create Food</a>
+			<div class="createfood-btn">
+				<a class="btn btn-danger" th:href="@{/food/new}" role="button">Create Food</a>
 			</div>
-			
-			<div th:if="${not #lists.isEmpty(myfoods)}" class="createfood-btn-list">
-				<a class="btn btn-success" th:href="@{/food/new}" role="button">Create Food</a>
-			</div>
-			
-			<!-- <div class="empty-list-message">
-				<c:if test="${empty myfoods}">
-				    You have not added any foods at the moment.
-				</c:if>
-			</div> -->
 		</div>
 		
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<div class="bg-modal">
+			<div class="content-modal">
+				<div class="close-btn">+</div>
+				
+				<div style="font-family: Arial, Helvetica, sans-serif;font-weight:bold;width:60%;margin:0 auto;margin-top:8%;text-align:center;">
+					<span id="sel-name" style="text-align: center;"></span>	
+				</div>
+				
+				<div style="width:50%;margin: 0 auto;margin-top:5%;margin-left:35%;">
+					<div class="edit-btn">
+						<a id="edit-food" href="#" class="btn btn-light" style="border-color: black;">Edit</a>
+					</div>
+					<div class="delete-btn">
+						<a id="delete-food" href="#" class="btn btn-success" style="border-color: black;">Delete</a>
+					</div>
+				</div>
+				
+				<div class="nutrition-label">
+					<span class="nutrition-facts">Nutrition Facts</span>
+				
+					<span class="serving-size">
+						<span class="ss-text">Serving size</span>
+						<span id="sel-servingsize" class="ss-value"></span>
+					</span>
+					
+					<div style="height: 3%; width: 94%; background: black; margin: auto; margin-top: 9%;"></div>
+					
+					<span class="calories">
+						<span class="calories-text">Calories</span>
+						<span id="sel-calories" class="calories-value"></span>
+					</span>
+					
+					<div style="height: 1.5%; width: 94%; background: black; margin: auto; margin-top: 14%;"></div>
+					
+					<span class="percent-macros">% Daily Macros*</span>
+					
+					<div style="height: 0.25%; width: 94%; background: black; margin: auto; margin-top: 6.75%;"></div>
+					
+					<div>
+						<table class="macro">
+							<tbody>
+								<tr>
+									<td class="macro-text macro-item" width="22.5%">Total Fat</td>
+									<td id="sel-fat" class="macro-value macro-item" width="69%"></td>
+									<td id="fat-percent" class="macro-percent macro-item" width="8.5%">0%</td>
+								</tr>
+								<tr>
+									<td class="macro-text macro-item" width="50%">Total Carbohydrate</td>
+									<td id="sel-carbs" class="macro-value macro-item" width="40%"></td>
+									<td id="carbs-percent" class="macro-percent macro-item" width="10%">0%</td>
+								</tr>
+								<tr>
+									<td class="macro-item" style="text-align:right; padding-right:5px;" width="50%">Dietary Fiber</td>
+									<td id="sel-fiber" class="macro-value macro-item" width="40%"></td>
+									<td id="carbs-percent" class="macro-percent macro-item" width="10%" style="padding-right:5px;">N/A</td>
+								</tr>
+								<tr>
+									<td class="macro-text" width="50%">Protein</td>
+									<td id="sel-protein" class="macro-value" width="40%"></td>
+									<td id="protein-percent" class="macro-percent" width="10%">0%</td>
+								</tr>
+								<tr>
+									<td class="divider"></td>
+									<td class="divider"></td>
+									<td class="divider"></td>
+								</tr>
+								<tr>
+									<td style="padding-top: 5px; font-size: 8.5px;" th:text="'*Calories: ' + ${#authentication.getPrincipal().getMacroPlan().getTargetCalories()} + ' | Carbs: ' + ${#authentication.getPrincipal().getMacroPlan().getCarbsGrams()} + 'g | Fat: ' + ${#authentication.getPrincipal().getMacroPlan().getFatGrams()} + 'g | Protein: ' + ${#authentication.getPrincipal().getMacroPlan().getProteinGrams()} + 'g'" colspan="3"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<script type="text/javascript">
+			var id = null;
+			var index = null;
+			
+			var goalCarbs = $("#goal-carbs").val();
+			var goalFat = $("#goal-fat").val();
+			var goalProtein = $("#goal-protein").val();
+		
+			$('a[id^=food]').click(function(){
+				var idArr = this.id.split("_");
+				index = idArr[1];
+				
+				id = $("#id_" + index).val();
+				console.log(id);
+				console.log(index);
+				
+				var brand = $("#brand_" + index).val();
+				var name = $("#name_" + index).val();
+				
+				if (brand != '') {
+					name = brand + " - " + name; 
+				}
+				
+				$("#sel-name").text(name);
+				$("#sel-servingsize").text($("#servingsize_" + index).val() + " " + $("#unitofmeasurement_" + index).val());
+				$("#sel-calories").text($("#calories_" + index).val());
+				$("#sel-carbs").text($("#carbs_" + index).val() + "g");
+				$("#sel-fat").text($("#fat_" + index).val() + "g");
+				$("#sel-protein").text($("#protein_" + index).val() + "g");
+ 				$("#sel-fiber").text($("#fiber_" + index).val() + "g");
+			  	
+			  	console.log((($("#fat_" + index).val() / goalFat)*100));
+			  	console.log((($("#carbs_" + index).val() / goalCarbs)*100));
+			  	console.log((($("#protein_" + index).val() / goalProtein)*100));
+			  	
+			  	$("#fat-percent").text((($("#fat_" + index).val() / goalFat)*100).toFixed(1) + "%");
+			  	$("#carbs-percent").text((($("#carbs_" + index).val() / goalCarbs)*100).toFixed(1) + "%");
+			  	$("#protein-percent").text((($("#protein_" + index).val() / goalProtein)*100).toFixed(1) + "%");
+			  	$("div.bg-modal").css("display", "flex");
+
+				// set edit/delete button hrefs
+				$("#delete-food").attr("href","/macropro/food/delete/" + id);
+				$("#edit-food").attr("href","/macropro/food/edit/" + id);
+			});
+			
+			$("div.close-btn").click(function(){ 
+				$(".bg-modal").hide();
+			});
+			
+			$(".bg-modal").click(function(){
+				$(".bg-modal").hide();
+			});
+			
+			$(".content-modal").click(function(e){
+				e.stopPropagation();
+			});
+			
+			$('#delete-food').click(function() {
+			    if (confirm('Are you sure you want to delete this food?')) {
+			    	return true;
+			      /* var url = $(this).attr('href');
+			      $('#delete-food').load(url); */
+			    } else {
+			    	return false;
+			    }
+			});
+		</script>
 </body>
 </html>
